logs/to_posgrest_v4.9/read_and_load_tip/2023-03-20T18:40:35.699367+00:00/2.log
[2023-03-20 18:45:46,511] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.9.read_and_load_tip manual__2023-03-20T18:40:35.699367+00:00 [queued]>
[2023-03-20 18:45:46,558] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.9.read_and_load_tip manual__2023-03-20T18:40:35.699367+00:00 [queued]>
[2023-03-20 18:45:46,559] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 18:45:46,560] {taskinstance.py:1239} INFO - Starting attempt 2 of 3
[2023-03-20 18:45:46,561] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 18:45:46,600] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): read_and_load_tip> on 2023-03-20 18:40:35.699367+00:00
[2023-03-20 18:45:46,606] {standard_task_runner.py:52} INFO - Started process 22034 to run task
[2023-03-20 18:45:46,614] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v4.9', 'read_and_load_tip', 'manual__2023-03-20T18:40:35.699367+00:00', '--job-id', '210', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmpaatw42ev', '--error-file', '/tmp/tmppmlr9s5b']
[2023-03-20 18:45:46,617] {standard_task_runner.py:77} INFO - Job 210: Subtask read_and_load_tip
[2023-03-20 18:45:46,936] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v4.9.read_and_load_tip manual__2023-03-20T18:40:35.699367+00:00 [running]> on host 0b4cdb459521
[2023-03-20 18:45:47,260] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v4.9
AIRFLOW_CTX_TASK_ID=read_and_load_tip
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T18:40:35.699367+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T18:40:35.699367+00:00
[2023-03-20 18:45:47,343] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 18:45:47,428] {dbapi.py:225} INFO - Running statement: 
            CREATE TEMPORARY TABLE temp_tip (
                user_id text not null,
                business_id text not null,
                text text not null,
                compliment_count int not null,
                date_values date not null,
                PRIMARY KEY (user_id, date_values)
            );

            COPY temp_tip FROM '/opt/***/data/output-csv/tip_restaurant.csv' DELIMITER ',' CSV HEADER NULL 'NA';
            INSERT INTO tip (user_id, business_id, text, compliment_count, date_values)
            SELECT user_id, business_id, text, compliment_count, date_values
            FROM temp_tip
            ON CONFLICT (user_id) DO NOTHING;

            # INSERT INTO tip (user_id, business_id, text, compliment_count, date_values)
            # SELECT DISTINCT ON (date_values) user_id, business_id, text, compliment_count, date_values
            # FROM temp_checkin
            # ORDER BY date_values
            # ON CONFLICT (date_values) DO NOTHING;
        , parameters: None
[2023-03-20 18:45:47,433] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "#"
LINE 17:             # INSERT INTO tip (user_id, business_id, text, c...
                     ^

[2023-03-20 18:45:47,529] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v4.9, task_id=read_and_load_tip, execution_date=20230320T184035, start_date=20230320T184546, end_date=20230320T184547
[2023-03-20 18:45:47,570] {standard_task_runner.py:92} ERROR - Failed to execute job 210 for task read_and_load_tip
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "#"
LINE 17:             # INSERT INTO tip (user_id, business_id, text, c...
                     ^

[2023-03-20 18:45:47,621] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 18:45:47,840] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
